--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "all": "^0.0.0",
+    "aos": "^3.0.0-beta.6",
     "netlify-cli": "^8.1.8",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -16,7 +17,6 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
-    "video-react": "^0.15.0",
     "web-vitals": "^1.0.1",
     "web3": "^1.5.1",
     "web3-eth-contract": "^1.5.2",
